Externalizing attachments style in global CSS
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2318 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2476,3 +2476,32 @@ caption {
     text-align: right;
 }
 /*- [ invitations END ] --------------------------- */
+
+/*- [ attachments BEGIN ] ------------------------- */
+a.yuimenuitemlabel-disabled:hover {
+	color: #B9B9B9;
+}
+
+ul#attachmentList.ui-sortable {
+	cursor:default;
+}
+
+ul#attachmentList {
+    list-style-type: none;
+    margin-left: 0px;
+    padding-left: 0px;
+}
+
+ul#attachmentList li.attachmentListItem {
+	margin:0;
+    padding:10px;
+}
+
+ul#attachmentList li.attachmentListItem .lineSize {
+	white-space: nowrap;
+}
+
+ul#attachmentList li.attachmentListItem .lineMain {
+    white-space: nowrap;
+}
+/*- [ attachments END ] ------------------------- */
