Closed Feature #1186 - Correction Padding/marging (tmp attente passage à ui.Dialog à la place de thickbox)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2628 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/jquery-thickbox.css
+++ b/war-core/src/main/webapp/util/styleSheets/jquery-thickbox.css
@@ -1,7 +1,8 @@
 /* ----------------------------------------------------------------------------------------------------------------*/
 /* ---------->>> global settings needed for thickbox <<<-----------------------------------------------------------*/
 /* ----------------------------------------------------------------------------------------------------------------*/
-*{padding: 0; margin: 0;}
+/* modif for silverpeas integration*/
+/**{padding: 0; margin: 0;}*/
 
 /* ----------------------------------------------------------------------------------------------------------------*/
 /* ---------->>> thickbox specific link and font settings <<<------------------------------------------------------*/
