Related to feature #1073 Displaying avatar in result page
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2631 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2151,6 +2151,11 @@ td.browsebar a:hover {
 	width:19%
 }
 
+#globalResult .avatar {
+	width: 30px;
+	border: 1px solid #AAAAAA;
+}
+
 #facetSearchDivId {
 	position:relative;
 	float:right;
