Improving component screens in back office
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2729 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3048,7 +3048,7 @@ caption {
   margin: 3px;
 }
 
-/***********Style de table générer par getJSON ""SocialInformation"*******************/
+/***********Style de table gï¿½nï¿½rer par getJSON ""SocialInformation"*******************/
 #myProfile #headAndCore #profilCore #socialIconsZone {
   float: left;
   width: 100%;
@@ -3088,3 +3088,18 @@ ul#attachmentList li.attachmentListItem .lineMain {
     white-space: nowrap;
 }
 /*- [ attachments END ] ------------------------- */
+
+#admin-component .componentIcon {
+	vertical-align: middle;
+}
+
+#admin-component .parameterInfo {
+	width: 12px;
+}
+
+#admin-component #parameters-header {
+	background-color: #EDEDED;
+	text-align: center;
+	margin-top:20px;
+	padding:5px;
+}
