partially closing feature #1285 Replacing almost all icons (even the component's ones)
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2743 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -1280,12 +1280,17 @@ td.browsebar a:hover {
 	font-weight: normal;
 }
 
+.browseComponent a {
+	vertical-align: middle;
+}
+
 .browseComponentActiv {
 	font-weight: bold;
 }
 
 .browseIconComponent {
-	margin-right: 2px;
+	margin: 2px;
+	margin-right: 4px;
 }
 
 .contentSpace {
