closing feature #1285 Replacing last icons...
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2760 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3108,3 +3108,8 @@ ul#attachmentList li.attachmentListItem .lineMain {
 	margin-top:20px;
 	padding:5px;
 }
+
+#admin-role .group-icon,
+#admin-role .user-icon {
+	margin: 1px;
+}
