--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2291,6 +2291,7 @@ caption {
 }
 
 /*- [ directory BEGIN ] --------------------------- */
+
 #directory .message_list {
   list-style: none;
   margin: 0;
@@ -2298,24 +2299,59 @@ caption {
   width: 100%;
 }
 
-#directory .message_list li {
+#directory .message_list li.intfdcolor  {
   padding: 0px;
   margin: 3px;
+  position:relative;
+  border:1px solid #CFCFCF;
 }
 
-#directory #recherche {
-  background-image:
-    url(<c:url value="/admin/jsp/icons/silverpeasV5/recherche.jpg"/>);
-  background-repeat: no-repeat;
+/*
+-- Pour affichage 1 seule colonne
+#directory .aff_colonnes li {
+	width:100%;
 }
+*/
+
+/* Par défaut, 2 colonnes */
+#directory .aff_colonnes li {
+	float:left;
+	margin-right:1%;
+	margin-right:0.5%;
+	width:48.8%;
+}
+
+/*
+-- Pour affichage 3 colonnes
+#directory .aff_colonnes li {
+	float:left;
+	margin-right:0.4%;
+	width:32.6%;
+}
+*/
 
 #directory .mail {
   text-decoration: underline;
-  color: blue;
+  color:#333366;
 }
 
-#directory .action {
-	float: right;
+#directory .link {
+  color:#333366;
+  border-bottom:1px solid #9E9ECF;
+  display:block;
+  padding:5px 0 3px 0; 
+  font-size:11px;
+}
+#directory .link:hover, #directory .link:focus {
+  color:#000;
+  border-bottom:1px solid #000;
+  display:block;
+  padding:5px 0 3px 0; 
+  font-size:11px;
+}
+
+#directory .action .invitation {
+	display: none;
 }
 
 #directory .NameLink {
@@ -2324,99 +2360,136 @@ caption {
 }
 
 #directory #index {
-
   float:none;
   margin:0 auto;
   padding:4px;
-  text-align:center;
-  width:370px;
-}
-
-#directory #index a {
-  font-size: 12px;
-  text-decoration: none;
-}
-
-#directory #index a.active {
-  font-weight: bolder;
-  text-decoration: underline;
-}
-
-#directory #search {
-  float:left;
-  margin:5px 10px 10px auto;
-  padding:5px;
   text-align:left;
-  width:230px;
+  width:100%;
+  color:#AFAFAF;
+}
+
+#directory #indexAndSearch #index a { 
+	border:1px solid #CECECE;
+	padding:2px 4px;
+	margin-right:3px;
+	background-color:#FFF;
+	color:#AFAFAF;
+	font-size: 12px;
+	text-decoration: none;
+	line-height:220%;
+}
+#directory #indexAndSearch #index a.active {
+	background-color:#B5B5B5;
+	color:#FFF;
+}
+
+#directory #indexAndSearch #index a:hover, #directory #indexAndSearch #index a:focus {
+	background-color:#BFBFBF;
+	color:#FFF;
+}
+
+#directory #indexAndSearch #search {
+	margin:5px 10px 10px auto;
+	padding:5px;
+	text-align:left;
+	width:100%;
+	background:transparent url(images_annuaire/sep-2-tiraits.gif)  15% bottom no-repeat;
+	height:25px;
+}
+#directory #indexAndSearch #search input, #indexAndSearch #search table {
+	display:inline;
+	float:left;
+}
+
+#directory #indexAndSearch #search input{
+	height:16px;
+	width:30%;
+}
+
+#directory #indexAndSearch .gaucheBoutonV5 , #directory #indexAndSearch .droiteBoutonV5{ 
+	display:none;
+}
+
+#directory #indexAndSearch .milieuBoutonV5 {
+	padding:0 5px;
+	border-right:1px solid #588ABB;
 }
 
 #directory #indexAndSearch{
-  float: left;
-  width: 98%;
+	background:#EAEAEA url(../icons/arrow/bg_tri.png) bottom left no-repeat;
+	padding:5px 5px 14px;
+ 	width: 98%;
 }
+
 #directory #users {
   float: left;
   width: 98%;
 }
 
-#directory .avatar {
-  width: 60px;
-  border: 0px;
-  margin: 5px;
-  border: 1px solid #AAAAAA;
+#directory #users .profilPhoto {
+ 	border:1px solid #CCCCCC;
+	float:left;
+	height:113px;
+	margin:7px;
+	overflow:hidden;
+	width:87px;
+}
+#directory #users .profilPhoto img {
+	height:113px;
 }
 
-#directory .defaultAvatar {
-  width: 60px;
-  height: 80px;
-  border: 0px;
-  margin: 5px;
-}
-
-#directory #users #infoAndPhoto #profilPhoto {
-  float:left;
-  width:80px;
-}
-
-#directory #users #infoAndPhoto #info {
-  float: left;
-  margin-top:   5px;
-}
-
-#directory #users #infoAndPhoto {
-  float:left;
-  width:65%;
-}
-
-#directory #users #action {
-  text-align: right;
-  float:right;
-  width:28%;
-  padding-top: 2%;
+#directory #users .action {
+	width:132px;
+	height:40px; 
+	position:absolute; 
+	bottom:10px; 
+	right:10px; 
 }
 
 #directory #users #pagination {
-  text-align: center;
+  	clear:both;
+	text-align:center;
 }
 
-#directory #info ul {
+#directory .info ul {
   margin: 0;
   padding: 0;
 }
 
-#directory #info ul li {
+#directory .info ul li {
   display:list-item;
   list-style-type:none;
+  width:100%;
 }
 
-#directory #users a{
-  font-size:10px;
-  font-weight:normal;
+#directory .info ul { 
+	padding:10px 0px 4px 5px; 
+	float:left;
+	color:#909090; font-size:11px;
+	width:60%;
 }
-#directory #info ul li .userName{
+#directory .info ul a {color:#909090; font-size:11px;}
+#directory .info ul a:hover {color:#000; font-size:11px;}
+
+#directory .info ul li.userName a{
   font-size:14px;
+  color:#000;
   font-weight:bold;
 }
+
+#directory .info ul li.infoConnection img{
+  position:absolute;
+  top:10px; 
+  right:10px;
+}
+
+#directory .info ul li.userType {
+  color:#333333;
+  font-size:12px;
+  font-weight:bold;
+  padding-top:10px;
+}
+
 /*- [ directory END ] --------------------------- */
 /*- [ invitations BEGIN ] --------------------------- */
 #invitation #navigation {
