Mise à jour css Global css -> Ajout d'une marge entre action et statut dans les fiches profil Light style -> correctif incohérence Fil ariane
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2840 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2912,6 +2912,12 @@ caption {
   text-decoration: underline;
   color:#333366;
 }
+
+
+#myProfileFiche  .action {
+	margin-top:5px;
+	}
+
 #myProfileFiche  .action .link , #publicProfileFiche  #contactCommun .link, #publicProfileFiche  #allContact .link{
   color:#333366;
   border-bottom:1px solid #9E9ECF;
@@ -3064,6 +3070,11 @@ caption {
   text-decoration: underline;
   color:#333366;
 }
+
+#publicProfileFiche  .action {
+	margin-top:5px;
+	}
+
 #publicProfileFiche  .action .link , #publicProfileFiche  #contactCommun .link, #publicProfileFiche  #allContact .link{
   color:#333366;
   border-bottom:1px solid #9E9ECF;
