Updating the site content
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2926 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -85,6 +85,7 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
         </p>
         <p>
           For a complete configuration description, see this <a href="http://maven.apache.org/guides/mini/guide-proxies.html">Maven documentation page</a>.
+          For a complete description of each parameter see <a href="http://maven.apache.org/ref/3.0.1/maven-settings/settings.html#proxy">Maven Settings.xml configuration page</a>.
         </p>
       </subsection>
       <subsection name="Postgresql">
