Related to Bug #1394 - Add rounded edge for contextual menu
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2984 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -40,6 +40,8 @@ body, td, div, a {
 	background-image:inherit;
 	color:#222222;
 }
+
+
 #ticker {
 	color:#666666;
 	left: 140px;
@@ -593,6 +595,19 @@ td.milieuOngletOn {
 	background-image: none;
 	font-size: 11px;
 }
+
+#topPage .yuimenu, #kmelia .yuimenu, #attachmentList .yuimenu{ 
+	padding:6px 0;
+	background-color:#C8ED99;
+	border:1px solid #9BD94A;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	-moz-box-shadow:8px 8px 10px #CCCCCC;
+	-webkit-box-shadow:8px 8px 10px #CCCCCC;
+	box-shadow:8px 8px 10px #CCCCCC;
+}
+
 .yuimenu a {
 	font-size:11px;
 	background-color:#C8ED99;
