--- a/war-core/src/main/webapp/util/styleSheets/jquery/fullcalendar.css
+++ b/war-core/src/main/webapp/util/styleSheets/jquery/fullcalendar.css
@@ -566,7 +566,7 @@ table.fc-header {
 .fc-event-vert span {
 	display: block;
 	position: relative;
-	z-index: 2;
+	/*z-index: 2;*/
 	}
 
 .fc-event-vert span.fc-event-time {
@@ -583,7 +583,7 @@ table.fc-header {
 
 .fc-event-vert span.fc-event-bg { /* makes the event lighter w/ a semi-transparent overlay  */
 	position: absolute;
-	z-index: 1;
+	/*z-index: 1;*/
 	top: 0;
 	left: 0;
 	width: 100%;
