css and icons for rss_link on portlet
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3017 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2030,6 +2030,11 @@ td.browsebar a:hover {
 	font-size: 10px;
 }
 
+#portletPages div.portlet-content .rss_link{
+	display:block;
+	text-align:right;
+}
+
 #portletPages div.portlet-content-minimized {
 	clear: both;
 }
